--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
   "devDependencies": {
     "microtime": "^2.1.7",
     "mocha": "^5.0.0",
-    "neon-cli": "^0.1.22",
     "source-map": "^0.7.0",
     "standard": "^10.0.3"
+  },
+  "dependencies": {
+    "neon-cli": "^0.1.22"
   }
 }
